[project]
name = "reddit-content-api"
version = "0.1.0"
description = "Reddit Content API - An MCP server for analyzing Reddit content"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dnspython>=2.7.0",
    "praw>=7.8.1",
    "redditwarp>=1.3.0",
    "fastmcp>=0.1.0",
    "uvicorn",
]


[project.scripts]
reddit-content = "mcp_reddit.reddit_fetcher:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_reddit"] 
